--- a/kontak.html
+++ b/kontak.html
@@ -7,7 +7,7 @@
     <title>TPQ</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="assets/css/aos.css">
+    <!-- <link rel="stylesheet" href="assets/css/aos.css"> -->
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/ekko-lightbox.css">
 
@@ -347,7 +347,7 @@
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/fontawesome/js/all.min.js"></script>
     <script src="assets/js/ekko-lightbox.min.js"></script>
-    <script src="assets/js/aos.js"></script>
+    <!-- <script src="assets/js/aos.js"></script> -->
     <script src="assets/js/app.js"></script>
 </body>
 </html>
