--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
         <div class="container">
             <div class="row mb-4" data-aos="fade-down">
                 <div class="col-md-12">
-                    <h3 class="mb-1 text-center"><b>Tujuan</b></h3>
-                    <hr style="width: 100px; border: 1px solid #333; margin: auto;">
+                    <h3 class="mb-2 text-center"><b>Tujuan</b></h3>
+                    <hr style="width: 100px; border-top: 2px solid #333; margin: auto;">
                 </div>
             </div>
 
@@ -193,8 +193,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="text-center mb-1"><b>Berita</b></h3>
-                    <hr style="width: 120px; border: 1px solid #333; text-align: center; margin: auto;">
+                    <h3 class="mb-2 text-center" data-aos="fade-down"><b>Berita</b></h3>
+                    <hr style="width: 90px; border-top: 2px solid #333; margin: auto;">
                 </div>
             </div>
 
@@ -264,10 +264,10 @@
     <!-- kegiatan -->
     <div class="kegiatan my-4 py-3">
         <div class="container">
-            <div class="row mb-4">
+            <div class="row mb-5">
                 <div class="col-md-12">
-                    <h3 style="text-align: center;"  class="mb-1"  data-aos="fade-down"><b>Kegiatan</b></h3>
-                    <hr style="width: 120px; margin: auto; border: 1px solid #333;">
+                    <h3 class="mb-2 text-center" data-aos="fade-down"><b>Kegiatan</b></h3>
+                    <hr style="width: 115px; border-top: 2px solid #333; margin: auto;">
                 </div>
             </div>
 
@@ -349,8 +349,8 @@
     <div class="container">
         <div class="row mb-4">
             <div class="col-md-12">
-                <h3 style="text-align: center;"  class="mb-1"  data-aos="fade-down"><b>Galeri</b></h3>
-                <hr style="width: 110px; margin: auto; border: 1px solid #333;">
+                <h3 class="mb-2 text-center" data-aos="fade-down"><b>Galeri</b></h3>
+                    <hr style="width: 90px; border-top: 2px solid #333; margin: auto;">
             </div>
         </div>
         <div class="row text-center" style="justify-content: space-around;">
@@ -395,8 +395,8 @@
         <div class="container">
             <div class="row mb-5 text-center">
                 <div class="col-md-12">
-                    <h3 class="mb-1" data-aos="fade-down"><b>Kontak</b></h3>
-                    <hr style="width: 90px; border: 1px solid #333; margin: auto;">
+                    <h3 class="mb-2 text-center" data-aos="fade-down"><b>Kontak</b></h3>
+                    <hr style="width: 105px; border-top: 2px solid #333; margin: auto;">
                 </div>
             </div>
 
